[package]
name = "trappist-rpc"
version = "1.0.0"
authors = ["Trappist Network <https://github.com/TrappistNetwork>"]
description = "A versatile Proof-of-Authority (PoA) Blockchain network."
license = "Unlicense"
homepage = "https://trappist.io"
repository = "https://github.com/TrappistNetwork/trappist"
edition = "2021"

[dependencies]
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-block-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-client-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-rpc-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
substrate-frame-rpc-system = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-consensus-manual-seal = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

futures = "0.3.21"
jsonrpsee = { version = "0.16.2", features = ["server"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
parachains-common = { git = "https://github.com/InfraBlockchain/infra-cumulus", default-features = false, branch = "master" }

# External Dependencies
pallet-dex-rpc = { version = "0.0.1", git = "https://github.com/paritytech/substrate-dex.git", default-features = false }

trappist-runtime = { path = "../runtime/trappist" }
