[package]
name = "xcm-simulator-trappist"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Examples of xcm-simulator usage."
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.2", features = ["derive"] }
thousands = "0.2.0"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }

frame-system = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
frame-support = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-assets = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-balances = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-sudo = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

pallet-asset-registry = { version = "0.0.1", path = "../pallets/asset-registry" }
xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
xcm-simulator = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
xcm-executor = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
xcm-builder = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
pallet-xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }

# Polkadot
infrablockspace-core-primitives = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-runtime-common = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-runtime-parachains = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-parachain = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }

# Cumulus
cumulus-pallet-xcm = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-primitives-utility = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
pallet-collator-selection = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
parachains-common = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }

# Runtimes
rococo-runtime = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
rococo-runtime-constants = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
statemine-runtime = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
stout-runtime = { path = "../runtime/stout" }
trappist-runtime = { path = "../runtime/trappist" }

# Trappist XCM Primitives
xcm-primitives = { path = "../primitives/xcm", default-features = false }
