[package]
name = "trappist-cli"
version = "1.0.0"
authors = ["Trappist Network <https://github.com/TrappistNetwork>"]
description = "A versatile Proof-of-Authority (PoA) Blockchain network."
license = "Unlicense"
homepage = "https://trappist.io"
repository = "https://github.com/TrappistNetwork/trappist"
edition = "2021"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

[dependencies]
async-trait = "0.1.57"
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.152", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }

# RPC related Dependencies
jsonrpsee = { version = "0.16.2", features = ["server"] }

# Local Dependencies
trappist-runtime = { path = "../../runtime/trappist" }
stout-runtime = { path = "../../runtime/stout" }

# Substrate Dependencies
frame-benchmarking-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master", optional = true }
try-runtime-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master", optional = true }

sc-sysinfo = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-telemetry = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-tracing = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

## Substrate Client Dependencies
sc-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master", optional = true }
sc-service = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master", optional = true }
## Substrate Primitive Dependencies
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master", optional = true }
# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-consensus-aura = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-consensus-common = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-network = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-service = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-relay-chain-interface = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }

parachains-common = { git = "https://github.com/InfraBlockchain/infra-cumulus", default-features = false, branch = "master" }

# Polkadot dependencies
infrablockspace-cli = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-parachain = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-primitives = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-service = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }

service = { package = "trappist-service", path = "../service", default-features = false, optional = true }

[dev-dependencies]
assert_cmd = "2.0"
nix = "0.23"
tempfile = "3.2.0"

[features]
default = ["cli"]
cli = ["service", "sp-core", "sc-cli", "sc-service", "frame-benchmarking-cli", "try-runtime-cli"]
runtime-benchmarks = [
	"infrablockspace-cli/runtime-benchmarks",
	"trappist-runtime/runtime-benchmarks",
	"stout-runtime/runtime-benchmarks",
]
try-runtime = ["service/try-runtime"]
with-trappist-runtime = ["service/with-trappist-runtime"]
with-stout-runtime = ["service/with-stout-runtime"]
