[package]
name = "trappist-service"
version = "1.0.0"
authors = ["Trappist Network <https://github.com/TrappistNetwork>"]
description = "A versatile Proof-of-Authority (PoA) Blockchain network."
license = "Unlicense"
homepage = "https://trappist.io"
repository = "https://github.com/TrappistNetwork/trappist"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

[dependencies]
async-trait = "0.1.57"
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.152", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }

# RPC related Dependencies
jsonrpsee = { version = "0.16.2", features = ["server"] }

# Local Dependencies
trappist-runtime = { path = "../../runtime/trappist", optional = true }
stout-runtime = { path = "../../runtime/stout", optional = true }
trappist-rpc = { path = "../../rpc" }

frame-benchmarking = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
try-runtime-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

pallet-transaction-payment-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

substrate-frame-rpc-system = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

sc-basic-authorship = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-chain-spec = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-client-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-executor = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-rpc-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-service = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-sysinfo = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-telemetry = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sc-tracing = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-block-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-consensus-aura = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-inherents = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-offchain = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-session = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-timestamp = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

# Substrate Dependencies
## Substrate Client Dependencies
## Substrate Primitive Dependencies
# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-consensus-aura = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-consensus-common = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-network = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-client-service = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-primitives-core = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }
cumulus-relay-chain-interface = { git = "https://github.com/InfraBlockchain/infra-cumulus", branch = "master" }

parachains-common = { git = "https://github.com/InfraBlockchain/infra-cumulus", default-features = false, branch = "master" }

# Polkadot dependencies
infrablockspace-cli = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-parachain = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-primitives = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-service = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }

# External Dependencies
pallet-dex-rpc = { version = "0.0.1", git = "https://github.com/paritytech/substrate-dex.git", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
nix = "0.23"
tempfile = "3.2.0"

[features]
default = ["std"]
std = []
runtime-benchmarks = ["trappist-runtime/runtime-benchmarks", "stout-runtime/runtime-benchmarks"]
try-runtime = ["trappist-runtime/try-runtime"]
with-trappist-runtime = ["trappist-runtime"]
with-stout-runtime = ["stout-runtime"]
