[package]
name = "xcm-primitives"
version = "0.0.1"
edition = "2021"

[dependencies]
sp-std = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
frame-support = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm-executor = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }

[features]
default = ["std"]
std = ["sp-std/std", "frame-support/std", "xcm/std", "xcm-executor/std"]
